force-app/main/default/objects/Referral__c/fields/Admin_Contact_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Admin_Contact_Suffix__c</fullName>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>Esq</fullName>
            </value>
            <value>
                <fullName>JD</fullName>
            </value>
            <value>
                <fullName>Jr</fullName>
            </value>
            <value>
                <fullName>LLD</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>Ret</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Sr</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>