force-app/main/default/objects/Referral__c/fields/Administratice_Contact_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Administratice_Contact_Middle_Name__c</fullName>
    <label>Administrative Contact Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>