force-app/main/default/objects/Referral__c/fields/Administrative_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Contact_Last_Name__c</fullName>
    <label>Administrative Contact Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>