force-app/main/default/objects/Referral__c/fields/Applicant_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Date_of_Birth__c</fullName>
    <label>Applicant Date of Birth</label>
    <type>Date</type>
</CustomField>