force-app/main/default/objects/Referral__c/fields/Application_Packed_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Packed_Sent_Date__c</fullName>
    <label>Application Packed Sent Date</label>
    <type>Date</type>
</CustomField>