force-app/main/default/objects/Referral__c/fields/Co_Applicant_Age__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Age__c</fullName>
    <formula>IF( NOT( ISBLANK( Co_Applicant_Date_of_Birth__c ) ) ,
IF( DATE( 2000 , MONTH( Co_Applicant_Date_of_Birth__c ) , DAY( Co_Applicant_Date_of_Birth__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( Co_Applicant_Date_of_Birth__c ),
YEAR (Today()) - YEAR ( Co_Applicant_Date_of_Birth__c ) -1 ),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>