force-app/main/default/objects/Referral__c/fields/Co_Applicant_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_Date_of_Birth__c</fullName>
    <label>Co-Applicant Date of Birth</label>
    <type>Date</type>
</CustomField>