force-app/main/default/objects/Referral__c/fields/Co_Applicant_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_First_Name__c</fullName>
    <label>Co-Applicant First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>