force-app/main/default/objects/Referral__c/fields/Co_Applicant_SSN__c.field-meta.xml
<CustomField>
    <fullName>Co_Applicant_SSN__c</fullName>
    <label>Co-Applicant SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>