force-app/main/default/objects/Referral__c/fields/Convert_Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Convert_Account_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert Account Contact</label>
    <type>Checkbox</type>
</CustomField>