force-app/main/default/objects/Referral__c/fields/Converted_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Converted_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converted Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Converted Account Id)</relationshipLabel>
    <relationshipName>Referrals3</relationshipName>
    <type>Lookup</type>
</CustomField>