force-app/main/default/objects/Referral__c/fields/CPA_Home_Formula__c.field-meta.xml
<CustomField>
    <fullName>CPA_Home_Formula__c</fullName>
    <formula>CPA_Office_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPA Home Formula</label>
    <type>Text</type>
</CustomField>