force-app/main/default/objects/Referral__c/fields/CPA_Office_ID__c.field-meta.xml
<CustomField>
    <fullName>CPA_Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type__c</field>
            <operation>equals</operation>
            <value>Private Organization</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>CPA Home</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (CPA Office ID)</relationshipLabel>
    <relationshipName>Referrals2</relationshipName>
    <type>Lookup</type>
</CustomField>