force-app/main/default/objects/Referral__c/fields/Information_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Information_Meeting_Date__c</fullName>
    <label>Information Meeting Date</label>
    <type>Date</type>
</CustomField>