force-app/main/default/objects/Referral__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>