force-app/main/default/objects/Referral__c/fields/Organization_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Site_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Name</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>