force-app/main/default/objects/Referral__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Received - Open New Provider</fullName>
                <default>true</default>
                <label>Application Received - Open New Provider</label>
            </value>
            <value>
                <fullName>Application Received - Re-Open Closed Provider</fullName>
            </value>
            <value>
                <fullName>Closed Provider Referral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>