force-app/main/default/objects/Referral__c/fields/Outcome_Date__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Outcome Date</label>
    <type>Date</type>
</CustomField>