force-app/main/default/objects/Referral__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GC1000 series</fullName>
            </value>
            <value>
                <fullName>GC5000 series</fullName>
            </value>
            <value>
                <fullName>GC3000 series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>