force-app/main/default/objects/Referral__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <formula>IF( OR(ISPICKVAL(  Type__c  , &apos;ICPC Home Study&apos;),ISPICKVAL(  Type__c  , &apos;Local Department Home&apos;), ISPICKVAL(  Type__c  , &apos;CPA Home&apos;)) ,  Applicant_First_Name__c  + &apos; &apos; + Applicant_Middle_Name__c+&apos; &apos;+  Applicant_Last_Name__c, Organization_Site_Name__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>