force-app/main/default/objects/Referral__c/fields/Provider_Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Provider_Referral_ID__c</fullName>
    <label>Provider ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>