force-app/main/default/objects/Referral__c/fields/Referal_status__c.field-meta.xml
<CustomField>
    <fullName>Referal_status__c</fullName>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Referral Converted</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>ReOpened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>