force-app/main/default/objects/Referral__c/fields/Reopen_Provider__c.field-meta.xml
<CustomField>
    <fullName>Reopen_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reopen Provider</label>
    <type>Checkbox</type>
</CustomField>