force-app/main/default/objects/Referral__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <label>Requested by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>