force-app/main/default/objects/Referral__c/fields/Supervis__c.field-meta.xml
<CustomField>
    <fullName>Supervis__c</fullName>
    <label>Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>