force-app/main/default/objects/Referral__c/fields/Tax_Id_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id_Type__c</fullName>
    <label>Tax Id Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SSN</fullName>
            </value>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>ITIN</fullName>
            </value>
            <value>
                <fullName>ATIN</fullName>
            </value>
            <value>
                <fullName>PTIN</fullName>
            </value>
            <value>
                <fullName>FEIN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>