force-app/main/default/objects/Referral__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPA Home</fullName>
            </value>
            <value>
                <fullName>CPA Office</fullName>
            </value>
            <value>
                <fullName>ICPC Home Study</fullName>
            </value>
            <value>
                <fullName>Local Department Home</fullName>
            </value>
            <value>
                <fullName>Private Organization</fullName>
            </value>
            <value>
                <fullName>RCC Facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>