force-app/main/default/objects/Referral__c/fields/Vendor_Paid_Services__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Paid_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vendor (Paid Services)</label>
    <type>Checkbox</type>
</CustomField>