force-app/main/default/objects/Referral__c/fields/Workker_Comments__c.field-meta.xml
<CustomField>
    <fullName>Workker_Comments__c</fullName>
    <label>Workker Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>