force-app/main/default/objects/Referral__c/recordTypes/Referral_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Referral_Read_Only</fullName>
    <active>true</active>
    <label>Referral Read Only</label>
</RecordType>