force-app/main/default/objects/Referral__c/recordTypes/Referral_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Referral_Record_Type</fullName>
    <active>false</active>
    <label>Referral Record Type</label>
</RecordType>