force-app/main/default/objects/Referral__c/validationRules/Age_must_be_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_must_be_18</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND( NOT(ISBLANK( Age__c )), Age__c &lt; 18),AND(NOT(ISBLANK( Co_Applicant_Age__c)), Co_Applicant_Age__c &lt; 18))</errorConditionFormula>
    <errorMessage>Age must be 18 years or over for this home to be approved</errorMessage>
</ValidationRule>