force-app/main/default/objects/Referral__c/validationRules/Application_packet_not_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_packet_not_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>Application_Packed_Sent_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Application_Packed_Sent_Date__c</errorDisplayField>
    <errorMessage>Application Packed Sent Date cannot be a future date</errorMessage>
</ValidationRule>