force-app/main/default/objects/Referral__c/validationRules/CPA_Office_Id.validationRule-meta.xml
<ValidationRule>
    <fullName>CPA_Office_Id</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;CPA Home&apos;),ISBLANK(CPA_Office_ID__c))</errorConditionFormula>
    <errorDisplayField>CPA_Office_ID__c</errorDisplayField>
    <errorMessage>CPA Office Id is required for CPA Home Type</errorMessage>
</ValidationRule>