force-app/main/default/objects/Referral__c/validationRules/CPA_Office_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>CPA_Office_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Type__c , &apos;CPA Office&apos;), ISNEW() , ISNULL( Organization_Site_Name__c ),ISNULL( Administrative_Contact_First_Name__c ),ISNULL( Administrative_Contact_Last_Name__c ))</errorConditionFormula>
    <errorMessage>Organization name, first name and last name are reqiured</errorMessage>
</ValidationRule>