force-app/main/default/objects/Referral__c/validationRules/Date_of_contact_cannot_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_contact_cannot_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Contact__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Contact__c</errorDisplayField>
    <errorMessage>Date of Contact cannot be a future date</errorMessage>
</ValidationRule>